--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,19 @@ body {
 }
 
 #myForm {
-  height: 130px;
+  height: 169px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+#myForm input {
+  margin: 2px 0;
+  border-radius: 6px;
+  border: none;
+}
+#myForm input:nth-child(1) {
+  border-radius: 6px;
 }
 
 input {
@@ -47,16 +55,7 @@ input {
 .table thead th {
   letter-spacing: 2px;
 }
-.table thead th:nth-child(1) {
-  width: 15%;
-}
-.table thead th:nth-child(5) {
-  width: 10%;
-}
 .table thead th:nth-child(6) {
-  width: 5%;
-}
-.table thead th:nth-child(7) {
   width: 5%;
 }
 
@@ -93,10 +92,6 @@ tbody tr:nth-child(even) {
   background-color: #344b6a;
 }
 
-.delete {
-  cursor: pointer;
-}
-
-.add {
+.delete, .edit, .add {
   cursor: pointer;
 }
