--- a/sass/style.sass
+++ b/sass/style.sass
@@ -17,11 +17,17 @@ body
     height: 100%
     margin: 30px 0 0 0
 #myForm
-    height: 130px
+    height: 169px
     display: flex
     flex-direction: column
     justify-content: space-between
     align-items: center
+    input
+        margin: 2px 0
+        border-radius: 6px
+        border: none
+    input:nth-child(1)
+        border-radius: 6px
 input
     color: black
 .table
@@ -34,14 +40,14 @@ input
     thead
         th
             letter-spacing: 2px
-        th:nth-child(1)
-            width: 15%
-        th:nth-child(5)
-            width: 10%
         th:nth-child(6)
             width: 5%
-        th:nth-child(7)
-            width: 5%
+        // th:nth-child(5)
+        //     width: 10%
+        // th:nth-child(6)
+        //     width: 5%
+        // th:nth-child(7)
+        //     width: 5%
             
 button
     margin: 0 20px
@@ -69,8 +75,7 @@ tbody
             background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5))
     tr:nth-child(even)
         background-color: #344b6a
-.delete
+.delete, .edit, .add
     cursor: pointer
-.add
-    cursor: pointer
+
 
