--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@ button {
 
 tbody tr {
   background: #63c242cc;
-  background-image: url(../image/unnamed.png);
 }
 tbody tr td {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5));
@@ -92,6 +91,10 @@ tbody tr:nth-child(even) {
   background-color: #344b6a;
 }
 
-.delete, .edit, .add {
+.delete, .edit, .add, .save {
   cursor: pointer;
+}
+
+.save {
+  width: 33px;
 }
