--- a/sass/style.sass
+++ b/sass/style.sass
@@ -69,13 +69,13 @@ button
 tbody
     tr
         background: #63c242cc
-        background-image: url(../image/unnamed.png)
         td
             // border: 1px solid white
             background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5))
     tr:nth-child(even)
         background-color: #344b6a
-.delete, .edit, .add
+.delete, .edit, .add, .save
     cursor: pointer
-
+.save
+    width: 33px
 
